Modify(bugfix) - fix bugfix of button & mouse wheel & align center

--- a/css/anime.css
+++ b/css/anime.css
@@ -60,10 +60,10 @@ a {
 
 .slider .item {
   position: absolute;
-  //top: 0;
-  //left: 0;
-  width: 110%;
-  //height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
